# YOUTUBE-SCRAPE

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup-windows.cmd  setup.ps1  setup.sh  start-gui.cmd  start-gui.ps1  start-gui.sh  verify.sh  youtube-scrape.spec  youtube-scrape.yaml
.cursor/rules/: AGENT-BEHAVIOR.mdc  ARCHITECTURE-&- DESIGN.mdc  CODE-STANDARDS.mdc  DOCUMENTATION-RULES.mdc  INITIAL-CODEBASE.mdc  MASTER-RULES.mdc  TESTING-&-QUALITY.mdc
.github/workflows/: ci.yml
Documentation/: architecture.md
Documentation/adr/: 0001-record-architecture-decisions.md  0002-no-data-api-camoufox.md  0004-downloader-and-signature-strategy.md  0007-analytics-and-ollama.md  0008-analytics-chat-rag.md
config/: logging.yaml
docs/: VIDEO_PLAYBACK_ANALYSIS.md
docs/adr/: 0001-record-architecture-decisions.md  0003-packaging-and-browser-distribution.md  0005-output-schema-versioning.md  0006-adopt-yt-dlp-library.md
gui/: .eslintignore  .eslintrc.cjs  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json
gui/scripts/: verify-gui.sh  verify-renderer.mjs
gui/src/main/: analytics-user-notes.ts  app-file-logger.ts  dashboard-trackers-file.ts  dev-logger.ts  index.ts  media-serve.ts  output-read.ts  python-bridge.ts
gui/src/preload/: index.ts
gui/src/renderer/: App.tsx
gui/src/shared/: dashboardTrackers.ts
packaging/: pyinstaller_entry.py
scripts/: build-python.py  package-standalone.sh  test-api.py
src/youtube_scrape/: __init__.py  __main__.py  config.py  exceptions.py  settings.py
src/youtube_scrape/adapters/: analytics_artifacts.py  browser_playwright.py  clock.py  (+8 more)
tests/: test_analytics.py  test_analytics_api_rag.py  test_analytics_chat.py  test_analytics_rag.py  test_browser_smoke.py  test_captions_convert.py  test_comment_snapshot_archive.py  test_comments_extract.py  test_dash_init.py  test_download_media.py  test_format_selector.py  test_gallery_metadata_refresh.py  test_innertube.py  test_js_decipher.py  test_json_extract.py  test_live_reference_video.py  test_media_route_sniffer_range.py  test_ollama_client_embed.py  test_playback_capture_rank.py  test_player_js_extract.py  test_player_parser.py  test_progressive_playback_packaging.py  test_protobuf_lead.py  test_ryd_votes_fetch.py  test_safe_filename.py  test_scrape_fatal_access.py  test_scrape_output_dir.py  test_scrape_thumbnails.py  test_signature_cipher.py  test_time_normalize.py  test_video_json_comment_sync.py  test_watch_initial_extract.py  test_youtube_data_api.py  test_youtube_url.py  test_yt_dlp_resolution.py
tests/fixtures/: initial_data_comments_min.json  initial_data_watch_primary.json  next_comments_entity_batch.json  player_response_min.json
tests/output/: README.md
(+105 files in other folders)
